--- a/src/index.css
+++ b/src/index.css
@@ -4,3 +4,25 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
+
+.inputRounded .MuiOutlinedInput-root {
+  border-radius: 100px;
+}
+
+.SearchTitle{
+  font-size: 2rem;
+  font-weight: 300;
+  color: #222831;
+  margin-bottom: 10px;
+}
+
+.navbarButtons{
+  font-weight: 500;
+}
+.navbarButtons:hover{
+  font-weight: 600;
+}
+
+.navbarLoginButton:hover{
+  color:#222831 ;
+}
