--- a/src/index.css
+++ b/src/index.css
@@ -34,6 +34,8 @@ body {
   color:#222831 ;
 }
 
+
+
 .bottomContent-buttons{
   font-weight: 300;
   font-size: 1rem;
@@ -83,4 +85,69 @@ body {
 .serviceCardCategory{
   font-size: 1.25em;
   font-weight: 700;
+}
+
+/* 
+USER DASHBOARD---------------------------------------------------------------- */
+
+.userDashboardEventContainer{
+  align-items: center;
+  justify-content: center;
+}
+
+/* EVENT BIDCARD------------------------------------------------------------------ */
+
+.eventBidCardCategory{
+  font-size: 1.25em;
+  font-weight: 500;
+  margin: 0;
+
+}
+
+.eventBidCardName{
+  font-size: 1.75em;
+  font-weight: 400;
+  margin: 0;
+}
+
+.eventBidCardLocation{
+  font-size: 1.25em;
+  font-weight: 400;
+  margin:0;
+}
+
+.eventBidCardDescription{
+  font-size: 1em;
+  font-weight: 400;
+  margin: 0;
+}
+.eventCardButton{
+  color:#1A2027;
+  font-weight: 500;
+}
+
+/* FILTERS------------------------------------- */
+.filters{
+  justify-content: center;
+}
+
+.filtersTitle{
+  font-size: 1.5em;
+  font-weight: 400;
+}
+.filterButtonTitle{
+  font-size: 1.5em;
+  font-weight: 400;
+  color: #1A2027;
+}
+
+.filterButtonContent{
+  margin: 0;
+  color: #1A2027;
+  font-weight: 600;
+}
+.filterButton{
+  background-color: #00ADB5;
+  margin: 0;
+ 
 }
