--- a/src/index.css
+++ b/src/index.css
@@ -215,3 +215,59 @@ USER DASHBOARD---------------------------------------------------------------- *
   margin: 0;
  
 }
+
+/* SERVICE PROVIDER DATA DISPLAY----------------------------------------- */
+
+.SPMainContainer{
+  align-items: center;
+  justify-content: center;
+
+}
+.SPDisplayContainer{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #f5f5f5;
+  height: 100%;
+}
+
+.SPDisplayContent{
+  justify-content: center;
+  align-items: center;
+  border-radius: 20px;
+}
+
+.SPDisplayTitle{
+  font-size: 1.75em;
+  font-weight: 650;
+  color: #fff;
+  background-color: #00ADB5;
+  border-radius: 100px;
+  height: 100%;
+  padding: 10px;
+}
+
+.SPDisplayContent{
+  background-color: #fff;
+  padding: 20px;
+  align-items: center;
+  text-align: center;
+  justify-content: center;
+}
+
+.SDPDIsplayDescription{
+ color: #1A2027;
+ font-size: 1em;
+ font-weight: 400;
+ padding: 30px;
+}
+.SDPDIsplayGallery{
+  color: #1A2027;
+ font-size: 1.25em;
+ font-weight: 600;
+}
+.SPDisplayButtons{
+  color: #1A2027;
+  font-weight: 500;
+  font-size: 1rem;
+}
